--- a/screen/.screenrc
+++ b/screen/.screenrc
@@ -11,6 +11,9 @@ startup_message off
 hardstatus alwayslastline
 hardstatus string "%-w%{= BW}%50>%n %t%{-}%+w%<"
 
+# set $TERM variable (support my vim color scheme)
+term screen-256color
+
 # From Stephen Shirley
 # Don't block command output if the terminal stops responding
 # (like if the ssh connection times out for example).
